tests/invalid/variables/bad_decl_2.rs
/*
fail: 1
*/

main(): int {
    foo bar: int = 3;
    return bar;
}